--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 python==3.5
 tensorflow==1.2
 keras==2.0.5
-librosa==
-numpy==
+librosa==0.6.3
+numpy==1.14.5
 matplotlib==
-jams==
-pandas==
-scipy==
+jams==0.3.4
+pandas==0.20.2
+scipy==1.4.1
