--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-python==3.5
-tensorflow==1.2
-keras==2.0.5
-librosa==0.6.3
-numpy==1.18.5
-matplotlib==3.0.0
 jams==0.3.4
-pandas==0.20.2
+keras==2.3.1
+librosa==0.6.3
+matplotlib==3.0.0
+numpy==1.18.5
+opencv-python==4.4.0.42
+python==3.5.6
+tensorflow==1.15
 scipy==1.4.1
