--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .ipynb_checkpoints/
 __pycache__/
 _wip/
-data/GuitarSet/annotation
-data/GuitarSet/audio_mono-mic
-data/train/
+
+*.jams
+*.wav
+*.npz
