--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 jams==0.3.4
-keras==2.3.1
+keras==2.2.4
 librosa==0.6.3
 matplotlib==3.0.0
 numpy==1.18.5
 opencv-python==4.4.0.42
 python==3.5.6
-tensorflow==1.15
+tensorflow==1.14
 scipy==1.4.1
+coremltools==3.3
