--- a/app/android/Tab_Writer/app/build.gradle
+++ b/app/android/Tab_Writer/app/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 28
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.unibo.tab_writer"
         minSdkVersion 26
-        targetSdkVersion 30
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
 
@@ -44,9 +44,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference:1.1.1'
-    implementation files('libs\\jlibrosa-1.0.2-SNAPSHOT-jar-with-dependencies.jar')
-    implementation files('libs\\jlibrosa-1.0.2-SNAPSHOT-javadoc.jar')
-    implementation files('libs\\TarsosDSP-Android-latest.jar')
+    implementation files('libs/TarsosDSP-Android-latest.jar')
     implementation 'org.tensorflow:tensorflow-lite-support:0.1.0-rc1'
     implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc1'
     testImplementation 'junit:junit:4.+'
@@ -60,4 +58,6 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     implementation 'org.tensorflow:tensorflow-lite:+'
+
+    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
 }
