--- a/app/android/Tab_Writer/app/build.gradle
+++ b/app/android/Tab_Writer/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.chaquo.python'
 }
 
 android {
@@ -12,6 +13,25 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
+        ndk {
+            abiFilters "armeabi-v7a", "x86"
+        }
+
+        python {
+            buildPython "C:/Users/Gabriele/anaconda3/envs/TabWriter2/python.exe"
+            pip {
+                install "numpy"
+                install "matplotlib"
+                install "librosa"
+                install "keras==2.3.1"
+                install "tensorflow==2.1.0"
+                install "pydub"
+            }
+            pyc {
+                src false
+            }
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -28,12 +48,19 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    aaptOptions {
+ /*   aaptOptions {
         noCompress "tflite"
         noCompress "lite"
     }
+
     buildFeatures {
         mlModelBinding true
+    }
+*/
+    sourceSets {
+        main {
+            python.srcDir "src/main/python"
+        }
     }
 }
 
@@ -44,7 +71,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.preference:preference:1.1.1'
-    implementation files('libs/TarsosDSP-Android-latest.jar')
     implementation 'org.tensorflow:tensorflow-lite-support:0.1.0-rc1'
     implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc1'
     testImplementation 'junit:junit:4.+'
@@ -56,8 +82,11 @@ dependencies {
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
-
-    implementation 'org.tensorflow:tensorflow-lite:+'
-
     implementation 'com.squareup.okhttp3:okhttp:4.7.2'
+
+    implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:0.0.0-nightly'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.0.0-nightly'
+
+    implementation 'com.arthenica:mobile-ffmpeg-full:4.4'
 }
