--- a/app/android/Tab_Writer/build.gradle
+++ b/app/android/Tab_Writer/build.gradle
@@ -4,9 +4,12 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven { url "https://chaquo.com/maven" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        //classpath "com.android.tools.build:gradle:4.1.2"
+        classpath "com.android.tools.build:gradle:4.1.0"
+        classpath "com.chaquo.python:gradle:9.0.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,8 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://jitpack.io' }
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
